# ve-renogy-rover

./: .flake8  README.md  install.sh  pyproject.toml  run
.github/workflows/: ci.yml
service-template/: run
service-template/log/: run
src/ve_renogy_rover/: dbus_service.py  device_info.py  glib_wrapper.py  rover_service.py  ve_dbus_service.py
tests/: conftest.py  test_device_info.py  test_rover_service.py
