[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ve-renogy-rover"
version = "0.2.0"
description = "D-Bus service to integrate Renogy Rover MPPT with Victron Venus OS"
authors = [{ name = "Seb Martin" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyrover @ git+https://github.com/sebmartin/pyrover.git"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
